--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,12 @@
     <div class="container" style="width: 95%; height: 100%">
       <div class="row" style="height: 100%">
         <div class="one-third column" style="margin-top: 25%">
-          <h4><b>Chat</b>, powered by Durable Objects</h4>
+          <h4><b>Chatflare</b>, by Matt</h4>
           <p>
-            This chat room is hosted in a single Durable Object, running in one
-            process in one machine in one location, very close to the users.
+            Powered by Cloudflare, Typescript, and an HTML nerd.
+
+            Rules:
+            - You must use your real name, or have your real name included in your display name.
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
