--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
-    <title>Chat!</title>
+    <title>Web Chat Interface</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -38,6 +38,7 @@
             <br>
             Rules:
             - You must use your real name, or have your real name included in your display name.
+            - Blank display names are not allowed
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
