--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,10 @@
           <h4><b>Chatflare</b>, by Matt</h4>
           <p>
             Powered by Cloudflare, Typescript, and an HTML nerd.
-            <br>
-            Rules:
-            - You must use your real name, or have your real name included in your display name.
-            - Blank display names are not allowed
+            <br><br>
+            Rules:<br>
+            - You must use your real name, or have your real name included in your display name.<br>
+            - Blank display names are not allowed<br>
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
