Disable cache and reload instead of closing tab

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -36,7 +39,7 @@
           <p>
             Powered by Cloudflare, Typescript, and an HTML nerd.
             <br><br>
-            Rules:<br>
+            <b>Rules:</b><br>
             - You must use your real name, or have your real name included in your display name.<br><br>
             - Blank display names are not allowed<br><br>
           </p>
