--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
             <b>Rules:</b><br>
             - You must use your real name, or have your real name included in your display name.<br><br>
             - Blank display names are not allowed<br><br>
+            <b>How to use this service:</b><br>
+            To create your own chatroom, you need to put your chatroom name after the URL, like this:<br><br>
+            http://chatflare.matts-apps.workers.dev/[Your chatroom name here.]
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
