don't know what i'm doing here

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container" style="width: 95%; height: 100%">
       <div class="row" style="height: 100%">
-        <div class="one-third column" style="margin-top: 25%">
+        <div class="two-thirds column" style="margin-top: 25%">
           <h4><b>Chatflare</b>, by Matt</h4>
           <p>
             Powered by Cloudflare, Typescript, and an HTML nerd.
