Add news column + styling

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container" style="width: 95%; height: 100%">
       <div class="row" style="height: 100%">
-        <div class="one-third column" style="margin-top: 15%">
+        <div class="one-third column" style="margin-top: 10%">
           <h4><b>Chatflare</b>, by Matt</h4>
           <p>
             Powered by Cloudflare, Typescript, and an HTML nerd.
@@ -44,7 +44,11 @@
             - Blank display names are not allowed<br><br>
             <b>How to use this service:</b><br>
             To create your own chatroom, you need to put your chatroom name after the URL, like this:<br><br>
-            http://chatflare.matts-apps.workers.dev/[Your chatroom name here.]
+            http://chatflare.matts-apps.workers.dev/[Your chatroom name here.]<br><br>
+            <b>News:</b><br>
+            Changes as of 8/9/25:<br>
+            - The system now saves your display name for later use so you don't have to enter it again.<br>
+            - Planning to add function so that if you go to your chatroom link, the roomname is pre-filled.<br>
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
