add extra thing

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
             Changes as of 8/9/25:<br>
             - The system now saves your display name for later use so you don't have to enter it again.<br>
             - Planning to add function so that if you go to your chatroom link, the roomname is pre-filled.<br>
+            - Now using npm run build because I'm accidentally using a dev instead of production build.
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
