--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,16 @@
             Powered by Cloudflare, Typescript, and an HTML nerd.
             <br><br>
             <b>Rules:</b><br>
-            - You must use your real name, or have your real name included in your display name.<br>
+            - You must use your real name, or have your real name included in your display name.<br><br>
             - Blank display names are not allowed<br><br>
             <b>How to use this service:</b><br>
             To create your own chatroom, you need to put your chatroom name after the URL, like this:<br><br>
             http://chatflare.matts-apps.workers.dev/[Your chatroom name here.]<br><br>
-            
+            <b>News:</b><br>
+            Changes as of 8/9/25:<br>
+            - The system now saves your display name for later use so you don't have to enter it again.<br>
+            - Planning to add function so that if you go to your chatroom link, the roomname is pre-filled.<br>
+            - Now using npm run build because I'm accidentally using a dev instead of production build.
           </p>
         </div>
         <div class="two-thirds column" id="root"></div>
